update git commit -m update

--- a/Server/templates/base.html
+++ b/Server/templates/base.html
@@ -15,7 +15,7 @@
       {{ if .User_details }}
       <div class="dropdown element hover">
         <button class="dropbtn">
-            <img class="pfp dropbtn" src="/static/profilepictures/{{ .User_details.username }}.jpeg" alt="My Account" width="16" height="16">
+            <img class="pfp dropbtn" src="/static/profilepictures/{{ .User_details.Username }}.jpeg" alt="My Account" width="16" height="16">
         </button>
         <div class="dropdown-content pfpcontent">
             <a href="/bills">My Bills</a>
