--- a/Server/templates/signup.html
+++ b/Server/templates/signup.html
@@ -13,7 +13,7 @@
     <h1>Sign Up</h1>
     <label>Create a UKIW account</label><br>
 
-    <form id="signupform" method="POST" enctype="multipart/form-data">
+    <form id="signupform" action="/" method="post">
         <div class="inputs">
             <label for="firstname">*Your Name</label>
             <br>
