--- a/Server/templates/base.html
+++ b/Server/templates/base.html
@@ -48,6 +48,6 @@
 
     {{ template "content" .}}
 
-    <script src="static/js/base.js"></script> 
+    <script src="/static/js/base.js"></script> 
 </body>
 </html>
