--- a/Server/templates/boats.html
+++ b/Server/templates/boats.html
@@ -2,7 +2,7 @@
 
 <h1>Boat Market</h1>
 Browse our selection of boats for sale
-
+<hr style="background-color: black; border-color: black; border-width: 1px;">
 <br>
 
 <div>
@@ -13,7 +13,7 @@ Browse our selection of boats for sale
 			<img src="/static/boatsforsale/{{.Image}}.jpg" alt="Image Unavailable" width="300" height="300">
 			
 			<hr>
-			{{.Name}}
+			{{.Name}} - {{.Price}}
 			<br>
 			<button class="boatviewbutton">View</button>
 		</span>
