--- a/Server/templates/login.html
+++ b/Server/templates/login.html
@@ -29,7 +29,7 @@
 
     <span style="font-size: 12px; border: 10px;">
         Don't have an account? 
-        <a href="/signup">Sign Up</a>
+        <a href="/accounts/signup">Sign Up</a>
     </span>
     
 </div>
