--- a/Server/templates/ourmarinas.html
+++ b/Server/templates/ourmarinas.html
@@ -2,4 +2,15 @@
 
 <h1>Our Marinas</h1>
 
+<div class="textbox">
+	Here at UKIW Marinas, we have an extensive collection of canal marinas for your convenience.
+	<br><br>
+	Here is a list of our currently owned marinas:
+	<ul>
+		<li>ssd</li>
+		<li>sdfg/li>
+		<li>ggff</li>
+	</ul> 
+</div>
+
 {{ end }}
