--- a/Server/templates/signup.html
+++ b/Server/templates/signup.html
@@ -190,7 +190,7 @@
 
     <span style="font-size: 12px; border: 10px;">
         Already have an account? 
-        <a href="/signin">Sign In</a>
+        <a href="/accounts/login">Sign In</a>
     </span>
 
     <script src="/static/js/signup.js"></script>
