--- a/Server/templates/base.html
+++ b/Server/templates/base.html
@@ -39,7 +39,7 @@
         </div>
       </div> 
       
-      <a href="/ourmarinas" class="hover element">Our Marinas</a>
+      <a href="/ourmarinas" class="hover element">Claydon Marina</a>
       
       <a href="javascript:void(0);" class="icon element" onclick="verticalMenu()">
         <img src="/static/img/icon.jpeg" width="17">
