--- a/Server/templates/ourmarinas.html
+++ b/Server/templates/ourmarinas.html
@@ -7,9 +7,9 @@
 	<br><br>
 	Here is a list of our currently owned marinas:
 	<ul>
-		<li>ssd</li>
-		<li>sdfg/li>
-		<li>ggff</li>
+		<li><a href="/ourmarinas/claydon">Claydon Marina</a></li>
+		<li><a href="">Hull Marina</a></li>
+		<li><a href="">Merseyside Marina</a></li>
 	</ul> 
 </div>
 
