--- a/Server/templates/search.html
+++ b/Server/templates/search.html
@@ -1,5 +1,9 @@
 {{ define "content" }}
 
 <h1>Search</h1>
+<form method="GET">
+    <input type="text">
+    <button type="submit">Search</button>
+</form>
 
 {{ end }}
