--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,6 +360,17 @@ h1{
   border-radius: 5px;
 }
 
+.reviewbox{
+  background-color: rgba(0, 0, 0, 0.92);
+  color: #fff;
+  padding: 20px;
+  width: 400px;
+  height: 200px;
+  border: 5px solid rgba(0, 0, 0, 0.01);
+  border-radius: 5px;
+  opacity: 20;
+}
+
 /*
 .map{
     margin-left: 5px;
