--- a/Server/templates/claydonmarina.html
+++ b/Server/templates/claydonmarina.html
@@ -3,7 +3,7 @@
 <h1>Claydon Marina</h1>
 
 <div class="textbox">
-	We at UKIW Marinas are developing an all new marina located in the heart of claydon.
+	We at UKIW Marinas are developing an all new marina located in the core of claydon.
 	Our spectacular marina will serve for short, medium and long term moorings for narrowboats
 	up to 70 feet in length! Due to the large size of our new marina, it will have space for up
 	to 300 boats and multiple must-have facilites such as:
@@ -33,7 +33,29 @@
 <h1 style="text-align: center;">Reviews</h1>
 
 <div class="reviewbox">
-    John Darwin
+    John Darwin | ★★★★☆
+    <hr>
+    A very good marina with lots of facilites. The area is great and the staff are kind, I will definitely be going back soon!
+    
+    <br><br>
+    <div style="text-align: left;">25/02/22</div>
 </div>
 
+<div class="reviewbox">
+    Mick Rickard | ★★★★★
+    <hr>
+    I absolutely loved my day out at the marina - it was marvelous! 10/10 would recommend to anyone and everyone. 
+    
+    <br><br>
+    <div style="text-align: left;">02/04/22</div>
+</div>
+
+<div class="reviewbox">
+    James Adamson | ★★★☆☆
+    <hr>
+    Was good but have seen better.
+    
+    <br><br><br><br>
+    <div style="text-align: left;">08/01/22</div>
+</div>
 {{ end }}
