--- a/Server/templates/base.html
+++ b/Server/templates/base.html
@@ -18,7 +18,7 @@
             <img class="pfp dropbtn" src="/static/profilepictures/{{ .User_details.Username }}.jpeg" alt="My Account" width="16" height="16">
         </button>
         <div class="dropdown-content pfpcontent">
-            <a href="/bills">My Bills</a>
+            <a href="/accounts/bills">My Bills</a>
             <a href="/accounts/settings">Settings</a>
             <a href="/accounts/logout">Log Out</a>
         </div>
