--- a/Server/templates/shops.html
+++ b/Server/templates/shops.html
@@ -6,20 +6,24 @@
 	<tbody>
 		<tr>
 			<td style="height: 28vw;">
-				<span style="height: 100%; box-sizing: border-box;" class="textbox" id="textbox">Hello And Welcome to UKIW marinas. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+				<span style="height: 100%; box-sizing: border-box;" class="textbox" id="textbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
 			</td>
 			<td>
 				<div class="slideshow-container">
 				  <div class="mySlides1">
-					<img src="/static/boatsforsale/0.jpg" style="width:100%">
+					<img src="/static/slideshows/convinencestore/tesco_3.jpg" style="width:100%">
+				  </div>
+					
+				  <div class="mySlides1">
+					<img src="/static/slideshows/convinencestore/tesco_0.jpg" style="width:100%">
 				  </div>
 
 				  <div class="mySlides1">
-					<img src="/static/boatsforsale/1.jpg" style="width:100%">
+					<img src="/static/slideshows/convinencestore/tesco_1.jpg" style="width:100%">
 				  </div>
 
 				  <div class="mySlides1">
-					<img src="/static/boatsforsale/2.jpg" style="width:100%">
+					<img src="/static/slideshows/convinencestore/tesco_2.jpg" style="width:100%">
 				  </div>
 
 				  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
@@ -32,15 +36,11 @@
 			<td style="height: 28vw;">
 				<div class="slideshow-container">
 				  <div class="mySlides2">
-					<img src="/static/boatsforsale/0.jpg" style="width:100%">
+					<img src="/static/slideshows/chandlery/chandlery_1.jpg" style="width:100%">
 				  </div>
-
+					
 				  <div class="mySlides2">
-					<img src="/static/boatsforsale/1.jpg" style="width:100%">
-				  </div>
-
-				  <div class="mySlides2">
-					<img src="/static/boatsforsale/2.jpg" style="width:100%">
+					<img src="/static/slideshows/chandlery/chandlery_0.jpg" style="width:100%">
 				  </div>
 
 				  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
