--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,14 +361,19 @@ h1{
 }
 
 .reviewbox{
-  background-color: rgba(0, 0, 0, 0.92);
+  background-color: rgba(0, 0, 0, 0.80);
   color: #fff;
   padding: 20px;
-  width: 400px;
-  height: 200px;
+  width: 300px;
+  height: 150px;
   border: 5px solid rgba(0, 0, 0, 0.01);
   border-radius: 5px;
   opacity: 20;
+  margin-right: 5px;
+  margin-bottom: 5px;
+
+  text-align: center;
+  float: left;
 }
 
 /*
